--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -4,6 +4,26 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>PhoneGap</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" charset="utf-8" src="js/cordova.js"></script>
+<script type="text/javascript" charset="utf-8">
+
+    
+    document.addEventListener("deviceready", onDeviceReady, false);
+
+ 
+    function onDeviceReady() {
+		
+        document.addEventListener("backbutton", onBackKeyDown, false);
+		
+    }
+
+    function onBackKeyDown() {
+		
+		navigator.app.exitApp();
+    }
+
+    </script>
+    
 </head>
 
 <body>
@@ -19,13 +39,18 @@
             </a>    
         </div>
         <div class="btn">
-        	<a href="#">
+        	<a href="earn_gold.html">
         		Earn Gold!
             </a>    
         </div>
         <div class="btn">
-        	<a href="">
+        	<a href="friend_list.html">
         		Friends List!
+            </a>    
+        </div>
+        <div class="btn">
+        	<a href="pictures.html">
+        		Pictures!
             </a>    
         </div>
     </div>
